--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
-layout: home
+layout: master
 ---
 
 {% include coll_ext/config/common-param.html %}
 
-{% assign list_title_item_acceuil = delim %}
+{% comment %}{% assign list_title_item_acceuil = delim %}
 {% assign list_link_article_item_acceuil = delim %}
-
+{% endcomment %}
 {% assign list_car_image_acceuil = delim %}
 {% assign list_car_description_img_acceuil = delim %}
 {% assign list_car_link_acceuil = delim %}
@@ -38,12 +38,12 @@ layout: home
       {% assign textMessageImportant = item_tmp.content %} 
     {% endif %}    
   {% endif %}
-  {% if item_tmp.path contains '/page-acceuil/menu-liens-articles/' %} 
+  {% comment %}{% if item_tmp.path contains '/page-acceuil/menu-liens-articles/' %} 
     {% unless item_tmp.path contains '/index.md'  %}
       {% assign list_title_item_acceuil = list_title_item_acceuil | append : item_tmp.title | append: delim %}
       {% assign list_link_article_item_acceuil = list_link_article_item_acceuil | append : item_tmp.link | append: delim %}
     {% endunless %}
-  {% endif %}
+  {% endif %}{% endcomment %}
   {% if item_tmp.path contains '/page-acceuil/carousel/' %} 
     {% unless item_tmp.path contains '/index.md'  %}
       {% assign list_car_image_acceuil = list_car_image_acceuil | append : item_tmp.image | append: delim %}
@@ -76,11 +76,11 @@ layout: home
   {% endif %}
 
 {% endfor %}
-
+{% comment %}
 {% assign array_title_item_acceuil = list_title_item_acceuil | remove_first: delim | split: delim  %}
 {% assign array_title_item_acceuil_size = array_title_item_acceuil.size | minus: 1 %}
 {% assign array_link_article_item_acceuil = list_link_article_item_acceuil | remove_first: delim | split: delim  %}
-
+{% endcomment %}
 
 
       
