mise au point info moteur de rech selection produit, ajout desciption et content

--- a/_pages/selection-produits-search.html
+++ b/_pages/selection-produits-search.html
@@ -37,7 +37,7 @@ title: "Une sélection de nos produits"
             <ul class="Grid Grid--gutters-m ">
               <li class="Grid-cell--autoSize "> 
                 <button class="catSearchShowAll">
-                  <div class="termSearch"><i class="fa fa-refresh" aria-hidden="true"></i></div>              
+                  <div class="termSearch">{{title_search}}</div>              
                 </button>     
               </li>
               <li class="Grid-cell  ">
